# goblins

./: .gitignore  Cargo.toml  README.md
src/: domain.rs  main.rs  model.rs  random.rs
