[package]
name = "power-law-playground"
version = "0.1.0"
authors = ["JoshuaLight <j.light.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]

rand = "0.8"
rand_xoshiro = "0.6"
time = "0.2"
plotters = "0.3"
