[package]
name = "power-law-playground"
version = "0.1.0"
authors = ["JoshuaLight <j.light.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]

rand = "0.8"
rand_xoshiro = "0.6"
time = "0.2"
gnuplot = "0.0.37"
fenwick-tree = "0.1"
counter = "0.5"
